stop overflow to calendar

--- a/src/styles/tables.scss
+++ b/src/styles/tables.scss
@@ -37,6 +37,10 @@ table.standings {
   }
 }
 
+.icon-holder {
+  position: relative;
+}
+
 .limiter {
   display: none;
   padding: 0;
